{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 332,
  "lineage": "c45e97a1-8ffb-4bc7-71a3-8a879b8b6872",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-project-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:internet-gateway/igw-0bb17677f7235aa42",
            "id": "igw-0bb17677f7235aa42",
            "owner_id": "133207472750",
            "tags": {
              "Name": "tf-project-IGW"
            },
            "tags_all": {
              "Name": "tf-project-IGW"
            },
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Asg-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:loadbalancer/app/Asg-LB/6d3ebd584f943dc8",
            "arn_suffix": "app/Asg-LB/6d3ebd584f943dc8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Asg-LB-745715657.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:loadbalancer/app/Asg-LB/6d3ebd584f943dc8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Asg-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a47982a5eb89f27e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bf738952ce6c4ce2"
              },
              {
                "subnet_id": "subnet-0e91b14ff36029d20"
              }
            ],
            "subnets": [
              "subnet-0bf738952ce6c4ce2",
              "subnet-0e91b14ff36029d20"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0a30d113e9b5ddfbc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.tf-project-subnet-1a",
            "aws_subnet.tf-project-subnet-1b",
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Asg-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:listener/app/Asg-LB/6d3ebd584f943dc8/e55be7c7c44fcb27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:targetgroup/ASG-TG/969914021c335848",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:listener/app/Asg-LB/6d3ebd584f943dc8/e55be7c7c44fcb27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:loadbalancer/app/Asg-LB/6d3ebd584f943dc8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Asg-LB",
            "aws_lb_target_group.ASG-TG",
            "aws_security_group.allow_ssh",
            "aws_subnet.tf-project-subnet-1a",
            "aws_subnet.tf-project-subnet-1b",
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ASG-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:targetgroup/ASG-TG/969914021c335848",
            "arn_suffix": "targetgroup/ASG-TG/969914021c335848",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:133207472750:targetgroup/ASG-TG/969914021c335848",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ASG-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-project-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:route-table/rtb-0faff8f2316e25bee",
            "id": "rtb-0faff8f2316e25bee",
            "owner_id": "133207472750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb17677f7235aa42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-project-RT"
            },
            "tags_all": {
              "Name": "tf-project-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-project-IGW",
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-project-RT-asso-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd2f1742874150f6",
            "route_table_id": "rtb-0faff8f2316e25bee",
            "subnet_id": "subnet-0e91b14ff36029d20"
          },
          "dependencies": [
            "aws_internet_gateway.tf-project-IGW",
            "aws_route_table.tf-project-RT",
            "aws_subnet.tf-project-subnet-1a",
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-project-RT-asso-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f02fc3eceb6e7b5",
            "route_table_id": "rtb-0faff8f2316e25bee",
            "subnet_id": "subnet-0bf738952ce6c4ce2"
          },
          "dependencies": [
            "aws_internet_gateway.tf-project-IGW",
            "aws_route_table.tf-project-RT",
            "aws_subnet.tf-project-subnet-1b",
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:security-group/sg-0a47982a5eb89f27e",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a47982a5eb89f27e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "133207472750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALLOW_SSH"
            },
            "tags_all": {
              "Name": "ALLOW_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-project-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:subnet/subnet-0e91b14ff36029d20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91b14ff36029d20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133207472750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-project-subnet-1A"
            },
            "tags_all": {
              "Name": "tf-project-subnet-1A"
            },
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-project-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:subnet/subnet-0bf738952ce6c4ce2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf738952ce6c4ce2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133207472750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-project-subnet-1B"
            },
            "tags_all": {
              "Name": "tf-project-subnet-1B"
            },
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-project-subnet2-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:subnet/subnet-0f0637a8e5a1bf96c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0637a8e5a1bf96c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133207472750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-project-subnet2-1A"
            },
            "tags_all": {
              "Name": "tf-project-subnet2-1A"
            },
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-project-subnet2-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:subnet/subnet-0a55a0eb5d15ce90c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55a0eb5d15ce90c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133207472750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-project-subnet2-1B"
            },
            "tags_all": {
              "Name": "tf-project-subnet2-1B"
            },
            "vpc_id": "vpc-0a30d113e9b5ddfbc"
          },
          "dependencies": [
            "aws_vpc.tf-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133207472750:vpc/vpc-0a30d113e9b5ddfbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-094ee3e0b0f60c469",
            "default_route_table_id": "rtb-0d6440c59a2140986",
            "default_security_group_id": "sg-0bbe368665e7b83e9",
            "dhcp_options_id": "dopt-0900e18abb5f7ac39",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a30d113e9b5ddfbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6440c59a2140986",
            "owner_id": "133207472750",
            "tags": {
              "Name": "tf-project-VPC"
            },
            "tags_all": {
              "Name": "tf-project-VPC"
            }
          }
        }
      ]
    }
  ]
}